[metadata]
name = odintools
author = Dmitriy Fontanov
author-email = ap-dc-team@odin.com
summary = Odin setuptools extensions
description-file = README.md
home-page = https://git.sw.ru/projects/DC/repos/ost
version = 0.1.0
license = MIT
classifier =
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
keywords =
    setup
    distutils

[files]
packages =
    odintools

[entry_points]
distutils.setup_keywords =
    odintools = odintools.args:odintools
    version_getter = odintools.args:version_getter
